book is not added to store if it is already there

--- a/CacheAsidePattern/CacheAsidePattern/CacheAsidePattern.csproj
+++ b/CacheAsidePattern/CacheAsidePattern/CacheAsidePattern.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs" />
     <Compile Include="CacheAside.cs" />
+    <Compile Include="CachedData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
