--- a/CacheAsidePattern/CacheAsidePattern/CacheAsidePattern.csproj
+++ b/CacheAsidePattern/CacheAsidePattern/CacheAsidePattern.csproj
@@ -58,8 +58,9 @@
   <ItemGroup>
     <Compile Include="Book.cs" />
     <Compile Include="Cache.cs" />
-    <Compile Include="CacheAside.cs" />
+    <Compile Include="DataAccessApi.cs" />
     <Compile Include="CachedData.cs" />
+    <Compile Include="DataStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
